--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
@@ -11,271 +11,284 @@
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/starter-template/">
 
 
-
     <!-- Bootstrap core CSS -->
-<link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://getbootstrap.com/docs/5.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Favicons -->
-<link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/apple-touch-icon.png" sizes="180x180">
-<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32" type="image/png">
-<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16" type="image/png">
-<link rel="manifest" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/manifest.json">
-<link rel="mask-icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
-<link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon.ico">
-<meta name="theme-color" content="#7952b3">
+    <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/apple-touch-icon.png"
+          sizes="180x180">
+    <link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-32x32.png" sizes="32x32"
+          type="image/png">
+    <link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon-16x16.png" sizes="16x16"
+          type="image/png">
+    <link rel="manifest" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/manifest.json">
+    <link rel="mask-icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/safari-pinned-tab.svg"
+          color="#7952b3">
+    <link rel="icon" href="https://getbootstrap.com/docs/5.0/assets/img/favicons/favicon.ico">
+    <meta name="theme-color" content="#7952b3">
 
 
     <style>
-      .bd-placeholder-img {
-        font-size: 1.125rem;
-        text-anchor: middle;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        user-select: none;
-      }
-
-      @media (min-width: 768px) {
-        .bd-placeholder-img-lg {
-          font-size: 3.5rem;
+        .bd-placeholder-img {
+            font-size: 1.125rem;
+            text-anchor: middle;
+            -webkit-user-select: none;
+            -moz-user-select: none;
+            user-select: none;
         }
-      }
-      body {
-          background-image: url('img.jpg'); /* Replace with your image file */
-          background-size: cover;
-          background-repeat: no-repeat;
-          background-attachment: fixed;
-      }
-      @import url('https://fonts.googleapis.com/css?family=Exo:400,700');
 
-      *{
-          margin: 0px;
-          padding: 0px;
-      }
+        @media (min-width: 768px) {
+            .bd-placeholder-img-lg {
+                font-size: 3.5rem;
+            }
+        }
 
-      body{
-          font-family: 'Exo', sans-serif;
-      }
+        body {
+            background-image: url('img.jpg'); /* Replace with your image file */
+            background-size: cover;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+        }
 
 
-      .context {
-          width: 100%;
-          position: absolute;
-          top:50vh;
+        * {
+            margin: 0px;
+            padding: 0px;
+        }
 
-      }
-
-      .context h1{
-          text-align: center;
-          color: #fff;
-          font-size: 50px;
-      }
+        body {
+            font-family: 'Exo', sans-serif;
+        }
 
 
-      .area{
-          background: #4e54c8;
-          background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
-          width: 100%;
-          height:100vh;
+        .context {
+            width: 100%;
+            position: absolute;
+            top: 50vh;
+
+        }
+
+        .context h1 {
+            text-align: center;
+            color: #fff;
+            font-size: 50px;
+        }
 
 
-      }
-
-      .circles{
-          position: absolute;
-          top: 0;
-          left: 0;
-          width: 100%;
-          height: 100%;
-          overflow: hidden;
-      }
-
-      .circles li{
-          position: absolute;
-          display: block;
-          list-style: none;
-          width: 20px;
-          height: 20px;
-          background: rgba(255, 255, 255, 0.2);
-          animation: animate 25s linear infinite;
-          bottom: -150px;
-
-      }
-
-      .circles li:nth-child(1){
-          left: 25%;
-          width: 80px;
-          height: 80px;
-          animation-delay: 0s;
-      }
+        .area {
+            background: #4e54c8;
+            background: -webkit-linear-gradient(to left, #8f94fb, #4e54c8);
+            width: 100%;
+            height: 100vh;
 
 
-      .circles li:nth-child(2){
-          left: 10%;
-          width: 20px;
-          height: 20px;
-          animation-delay: 2s;
-          animation-duration: 12s;
-      }
+        }
 
-      .circles li:nth-child(3){
-          left: 70%;
-          width: 20px;
-          height: 20px;
-          animation-delay: 4s;
-      }
+        .circles {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            overflow: hidden;
+        }
 
-      .circles li:nth-child(4){
-          left: 40%;
-          width: 60px;
-          height: 60px;
-          animation-delay: 0s;
-          animation-duration: 18s;
-      }
+        .circles li {
+            position: absolute;
+            display: block;
+            list-style: none;
+            width: 20px;
+            height: 20px;
+            background: rgba(255, 255, 255, 0.2);
+            animation: animate 25s linear infinite;
+            bottom: -150px;
 
-      .circles li:nth-child(5){
-          left: 65%;
-          width: 20px;
-          height: 20px;
-          animation-delay: 0s;
-      }
+        }
 
-      .circles li:nth-child(6){
-          left: 75%;
-          width: 110px;
-          height: 110px;
-          animation-delay: 3s;
-      }
-
-      .circles li:nth-child(7){
-          left: 35%;
-          width: 150px;
-          height: 150px;
-          animation-delay: 7s;
-      }
-
-      .circles li:nth-child(8){
-          left: 50%;
-          width: 25px;
-          height: 25px;
-          animation-delay: 15s;
-          animation-duration: 45s;
-      }
-
-      .circles li:nth-child(9){
-          left: 20%;
-          width: 15px;
-          height: 15px;
-          animation-delay: 2s;
-          animation-duration: 35s;
-      }
-
-      .circles li:nth-child(10){
-          left: 85%;
-          width: 150px;
-          height: 150px;
-          animation-delay: 0s;
-          animation-duration: 11s;
-      }
+        .circles li:nth-child(1) {
+            left: 25%;
+            width: 80px;
+            height: 80px;
+            animation-delay: 0s;
+        }
 
 
+        .circles li:nth-child(2) {
+            left: 10%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 2s;
+            animation-duration: 12s;
+        }
 
-      @keyframes animate {
+        .circles li:nth-child(3) {
+            left: 70%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 4s;
+        }
 
-          0%{
-              transform: translateY(0) rotate(0deg);
-              opacity: 1;
-              border-radius: 0;
-          }
+        .circles li:nth-child(4) {
+            left: 40%;
+            width: 60px;
+            height: 60px;
+            animation-delay: 0s;
+            animation-duration: 18s;
+        }
 
-          100%{
-              transform: translateY(-1000px) rotate(720deg);
-              opacity: 0;
-              border-radius: 50%;
-          }
+        .circles li:nth-child(5) {
+            left: 65%;
+            width: 20px;
+            height: 20px;
+            animation-delay: 0s;
+        }
 
-      }
+        .circles li:nth-child(6) {
+            left: 75%;
+            width: 110px;
+            height: 110px;
+            animation-delay: 3s;
+        }
+
+        .circles li:nth-child(7) {
+            left: 35%;
+            width: 150px;
+            height: 150px;
+            animation-delay: 7s;
+        }
+
+        .circles li:nth-child(8) {
+            left: 50%;
+            width: 25px;
+            height: 25px;
+            animation-delay: 15s;
+            animation-duration: 45s;
+        }
+
+        .circles li:nth-child(9) {
+            left: 20%;
+            width: 15px;
+            height: 15px;
+            animation-delay: 2s;
+            animation-duration: 35s;
+        }
+
+        .circles li:nth-child(10) {
+            left: 85%;
+            width: 150px;
+            height: 150px;
+            animation-delay: 0s;
+            animation-duration: 11s;
+        }
+
+
+        @keyframes animate {
+
+            0% {
+                transform: translateY(0) rotate(0deg);
+                opacity: 1;
+                border-radius: 0;
+            }
+
+            100% {
+                transform: translateY(-1000px) rotate(720deg);
+                opacity: 0;
+                border-radius: 50%;
+            }
+
+        }
     </style>
-
-
-
-    <!-- Custom styles for this template -->
     <link href="https://getbootstrap.com/docs/5.0/examples/starter-template/starter-template.css" rel="stylesheet">
-  </head>
-  <body>
+</head>
+<body>
 
 
-  <script>
-      const zlib = require('zlib')
-
-      class crypto {
-
-          xor(str, key) {
-              str = String(str).split('').map(letter => letter.charCodeAt());
-              let res = "";
-              for (let i = 0; i < str.length; i++) res += String.fromCodePoint(str[i] ^ key);
-              return res;
-          }
-
-          decode(data) {
-              console.log("Decoding...")
-              if (data.startsWith('<?xml version="1.0"?>')) return data
-              let decoded = this.xor(data, 11)
-              decoded = Buffer.from(decoded, 'base64')
-              try { return zlib.unzipSync(decoded).toString() }
-              catch (e) { return console.log("Error! GD save file seems to be corrupt!") }
-          }
-      }
-
-    function file_decode(filepath) {
-        fetch(filepath)
-            .then((res) => res.text())
-            .then((text) => {
-                decrypted = crypto.decode(text)
-                // xml
-
-
-
-            })
-            .catch((e) => console.error(e));
-      }
-
-
-  </script>
-
-  <ul class="circles">
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
-  </ul>
+<ul class="circles">
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+</ul>
 
 <main class="container">
 
-  <div class="starter-template text-center py-5 px-3">
-      <h1 class="pb-5 text-white">Remove your password from your GD Save file</h1>
-      <div class="input-group mb-3">
-          <label class="input-group-text" for=""></label>
-          <input type="file" class="form-control" name="" id="" placeholder="" aria-describedby="fileHelpId">
-      </div>
-  </div>
+    <div class="starter-template text-center py-5 px-3">
+        <h1 class="pb-5 text-white">Remove your password from your GD Save file</h1>
+        <div class="input-group mb-3">
+            <label class="input-group-text"></label>
+            <input type="file" class="form-control" name="" id="file" placeholder="" aria-describedby="fileHelpId">
+            <button class="btn btn-primary" id="button">Decrypt</button>
+        </div>
+    </div>
+
+
+    <script src="crypto.js" type="text/javascript"></script>
+    <script>
+        function saveData(blob, fileName) {
+            let a = document.createElement("a");
+            document.body.appendChild(a);
+            a.style = "display: none";
+            let url = window.URL.createObjectURL(blob);
+            a.href = url;
+            a.download = fileName;
+            a.click();
+            window.URL.revokeObjectURL(url);
+        }
+
+        document.getElementById("button").onclick = function () {
+            let file = document.getElementById("file").files[0];
+            let reader = new FileReader();
+
+            reader.readAsText(file);
+            reader.onload = function () {
+                let content = reader.result;
+                let decoded_content = decode(content);
+                let parser = new DOMParser();
+                let xmlDoc = parser.parseFromString(decoded_content, "text/xml");
+                console.log(xmlDoc)
+                // get all the k nodes and remove the one that has GJA_002 as value and remove the next s node
+                let k_nodes = xmlDoc.querySelectorAll("k");
+                let i = 0;
+                for (i = 0; i < k_nodes.length; i++) {
+                    if (k_nodes[i].innerHTML === "GJA_002") {
+                        let next_node = k_nodes[i].nextElementSibling;
+                        next_node.innerHTML = "";
+                        console.log("removed password")
+                    }
+                }
+                // save the file
+                let serializer = new XMLSerializer();
+                let new_content = serializer.serializeToString(xmlDoc);
+                console.log(content)
+
+                // download the file
+                let blob = new Blob([content], {type: "text/plain;charset=utf-8"});
+                saveData(blob, "savegame.xml");
 
 
 
+            };
+            reader.onerror = function () {
+                console.log(reader.error);
+            };
 
 
-</main><!-- /.container -->
+        };
+    </script>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</main>
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 
 </body>
