fix - modify the sentence

--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <main class="container">
 
     <div class="starter-template text-center py-5 px-3">
-        <h1 class="pb-5 text-white">Remove your password from your GD Save file</h1>
+        <h1 class="pb-5 text-white">Get your data in XML from your Geometry Dash save file (Without your password) !</h1>
         <div class="input-group mb-3">
             <label class="input-group-text"></label>
             <input type="file" class="form-control" name="" id="file" placeholder="" aria-describedby="fileHelpId">
