--- a/index.html
+++ b/index.html
@@ -220,8 +220,8 @@
         </div>
     </div>
 
-
     <script src="crypto.js" type="text/javascript"></script>
+    <script src="pako.js" type="text/javascript"></script>
     <script>
         function saveData(blob, fileName) {
             let a = document.createElement("a");
@@ -245,7 +245,6 @@
                 let parser = new DOMParser();
                 let xmlDoc = parser.parseFromString(decoded_content, "text/xml");
                 console.log(xmlDoc)
-                // get all the k nodes and remove the one that has GJA_002 as value and remove the next s node
                 let k_nodes = xmlDoc.querySelectorAll("k");
                 let i = 0;
                 for (i = 0; i < k_nodes.length; i++) {
